# mkdocs_intersphinx

./: README.md  pyproject.toml
mkdocs_intersphinx/: __init__.py  inventory.py  plugin.py
tests/: __init__.py  test_inventory.py  test_parser.py
